@@ -5,6 +5,7 @@
 
 2010-05-26  Steffen Kamper  <info@sk-typo3.de>
 
+	* Fixed bug #14394: Better debug output for SQL Explain
 	* Fixed bug #14466: Bug: SpriteIconApi getSpriteIconForRecord does not find default icon (thanks to Steffen Ritter)
 	* Follow-up to bug #13379: Sprite Icon API (thanks to Steffen Ritter)
 	* Follow-up to bug #14324: Feature: Add spriteGeneratorAPI to support the new sprite-icon-api (thanks to Steffen Ritter)
